--- a/snippets/product-variant-picker.liquid
+++ b/snippets/product-variant-picker.liquid
@@ -114,7 +114,7 @@ label {
         endif
       -%}
       {%- if picker_type == 'swatch' -%}
-        <fieldset class="js product-form__input product-form__input--swatch">
+        <fieldset class="js product-form__input product-form__input--swatch"  {%- if is_hidden_option -%} style="display: none;" {%- endif -%}>
           <legend class="form__label">
             {{ option.name }}:
             <span data-selected-value>
@@ -129,7 +129,7 @@ label {
           %}
         </fieldset>
       {%- elsif picker_type == 'button' -%}
-        <fieldset class="js product-form__input product-form__input--pill">
+        <fieldset class="js product-form__input product-form__input--pill" {%- if is_hidden_option -%} style="display: none;" {%- endif -%}>
           <legend class="form__label">{{ option.name }}</legend>
           {% render 'product-variant-options',
             product: product,
@@ -139,7 +139,7 @@ label {
           %}
         </fieldset>
       {%- else -%}
-        <div class="product-form__input product-form__input--dropdown">
+        <div class="product-form__input product-form__input--dropdown"{%- if is_hidden_option -%} style="display: none;" {%- endif -%}>
           <label class="form__label" for="Option-{{ section.id }}-{{ forloop.index0 }}">
             {{ option.name }}
           </label>
